# HealthScoringAgent

./: .env.sample  .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  Untitled spreadsheet - Connected Sheet 1.csv  Untitled spreadsheet - Extract 1.csv  analysis_output.json  backlog.md  cloudbuild.yaml  pyproject.toml  requirements.txt  run_dev.py  sample.py
.github/workflows/: ci.yml
agentic_code_analyzer/: main.py  models.py  orchestrator.py  requirements.txt  validation_model.py  validation_orchestrator.py
agentic_code_analyzer/agents/: code_cleaning_agent.py  deterministic_language_detection_agent.py  deterministic_region_tag_agent.py  evaluation_validation_agent.py  language_detection_agent.py  product_categorization_agent.py  product_id_agent.py  region_tag_agent.py  shared_config.py  validation_agent.py
agentic_code_analyzer/evaluation_agent/: evaluation_agent.py  evaluation_review.md
agentic_code_analyzer/prompts/: api_analysis_prompt.md  clarity_readability_prompt.md  code_quality_prompt.md  consolidated_eval.md  (+11 more)
agents/: evaluation_agent.py  validation_agent.py
api/: main.py
app/: main.py
code_eval_agent/: agent.py  code_eval_agent_instruction.md
config/: logging_config.py
docs/: Agent Code Refactor Completed._.md  Agent Code Refactoring Completed._.md  PRODUCT_REQUIREMENTS.md  TECHNICAL_DESIGN.md
static/: index.html  script.js  style.css
tests/: test_ai_agents.py  test_deterministic_agents.py  test_orchestrator.py  test_orchestrator_integration.py  test_validation_agent.py
(+13 files in other folders)
