[project]
name = "health-scoring-agent"
version = "0.1.0"
description = "An agentic code analyzer for health scoring."
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "python-dotenv",
    "pygments",
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
dev = "uvicorn api.main:app --host 0.0.0.0 --port 8090 --reload"