[project]
name = "health-scoring-agent"
version = "0.1.0"
description = "An agentic code analyzer for health scoring."
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "python-dotenv",
    "pygments",
    "fastapi",
    "uvicorn[standard]",
    "google-generativeai",
    "demjson3",
    "httpx",
]

[project.scripts]
dev = "run_dev:main"

[tool.setuptools]
py-modules = ["run_dev"]
packages = ["agentic_code_analyzer", "api"]