[project]
name = "health-scoring-agent"
version = "0.1.0"
description = "An agentic code analyzer for health scoring."
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "python-dotenv",
    "pygments",
    "fastapi",
    "uvicorn[standard]",
    "google-generativeai",
    "demjson3",
    "httpx",
    "pygments",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-mock", "pytest-asyncio"]

[project.scripts]
dev = "run_dev:main"

[tool.setuptools]
py-modules = ["run_dev"]
packages = ["agentic_code_analyzer", "api", "config"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
